Bug 76776 - incremental display of progressive jpegs.  r=pavlov, sr=jag